@@ -1,3 +1,6 @@
+2022-01-12 Franz Holzinger <franz@ttproducts.de>
+    * bugfix: PHP 8
+    * new feature: Add ErrorHandler debugger which must be activated in the file LocalConfiguration.php.
 
 2022-01-11 Franz Holzinger <franz@ttproducts.de>
     * It should still work with TYPO3 10.4 and PHP 7.4 as well.
